--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "pinia": "^2.0.27",
     "swiper": "^8.4.5",
     "vue": "^3.2.41",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "vue2-google-maps": "^0.10.7"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.2.0",
