--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "pinia": "^2.0.27",
     "swiper": "^8.4.5",
     "vue": "^3.2.41",
+    "vue-i18n": "^9.2.2",
     "vue-router": "^4.1.6",
     "vue2-google-maps": "^0.10.7"
   },
