--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vuelidate/core": "^2.0.0",
+    "@vuelidate/validators": "^2.0.0",
+    "axios": "^1.2.1",
     "pinia": "^2.0.27",
     "swiper": "^8.4.5",
     "vue": "^3.2.41",
     "vue-i18n": "^9.2.2",
     "vue-router": "^4.1.6",
+    "vue-toastification": "^1.7.14",
     "vue2-google-maps": "^0.10.7"
   },
   "devDependencies": {
