--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@vuelidate/core": "^2.0.0",
     "@vuelidate/validators": "^2.0.0",
+    "@vueuse/core": "^9.9.0",
     "axios": "^1.2.1",
     "pinia": "^2.0.27",
     "swiper": "^8.4.5",
