--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@vueuse/core": "^9.9.0",
     "axios": "^1.2.1",
     "pinia": "^2.0.27",
+    "scss": "^0.2.4",
     "swiper": "^8.4.5",
     "vue": "^3.2.41",
     "vue-i18n": "^9.2.2",
