--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "vue": "^3.2.41",
     "vue-i18n": "^9.2.2",
     "vue-router": "^4.1.6",
-    "vue-toastification": "^1.7.14",
-    "vue2-google-maps": "^0.10.7"
+    "vue-toastification": "^1.7.14"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.2.0",
