--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "vue-toastification": "^1.7.14"
   },
   "devDependencies": {
+    "@tailwindcss/line-clamp": "^0.4.2",
     "@vitejs/plugin-vue": "^3.2.0",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.19",
