--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@vuelidate/validators": "^2.0.0",
     "@vueuse/core": "^9.9.0",
     "axios": "^1.2.1",
+    "dotenv": "^16.0.3",
     "pinia": "^2.0.27",
     "scss": "^0.2.4",
     "swiper": "^8.4.5",
     "vue": "^3.2.41",
+    "vue-google-oauth2": "^1.5.8",
     "vue-i18n": "^9.2.2",
     "vue-router": "^4.1.6",
     "vue-toastification": "^1.7.14"
