--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-KEY = "hello world"
+GOOGLE_OAUTH_CLIENT_ID='736839198215-famfbf5fibh3a2fnut8544gnvh85vpvb.apps.googleusercontent.com'
+GOOGLE_OAUTH_CLIENT_SECRET='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'
+GOOGLE_OAUTH_REDIRECT_URL='http://localhost:8000/api/sessions/oauth/google'
