--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "vue-google-oauth2": "^1.5.8",
     "vue-i18n": "^9.2.2",
     "vue-router": "^4.1.6",
-    "vue-toastification": "^1.7.14"
+    "vue-toastification": "^1.7.14",
+    "vue3-google-oauth2": "^1.0.6"
   },
   "devDependencies": {
     "@tailwindcss/line-clamp": "^0.4.2",
