--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@vuelidate/core": "^2.0.0",
     "@vuelidate/validators": "^2.0.0",
     "@vueuse/core": "^9.9.0",
+    "@vueuse/motion": "^2.0.0-beta.12",
     "axios": "^1.2.1",
     "pinia": "^2.0.27",
     "scss": "^0.2.4",
