--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@vueuse/motion": "^2.0.0-beta.12",
     "axios": "^1.2.1",
     "pinia": "^2.0.27",
-    "pinia-persist": "^0.1.0",
+    "pinia-plugin-persistedstate": "^3.1.0",
     "scss": "^0.2.4",
     "swiper": "^8.4.5",
     "vue": "^3.2.41",
